relocated missing tag grouped endpoints for user and store. swagger autogenerates correctly
